--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* customStyles.css */
+
+.slide {
+    background: #fff;
+    color: #3498db;
+    font-size: 42px;
+    line-height: 100px;
+    margin: 10px;
+    padding: 2%;
+    position: relative;
+    text-align: center;
+    transition: all 0.3s ease;
+    opacity: 0.5;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.slick-center .slide {
+    opacity: 1;
+    font-size: 80px;
+}
+
+.swiper-slide {
+    transition: transform 0.5s ease-in-out;
+}
+
+.swiper-slide-active {
+    transform: scale(1.2);
+    margin-bottom: 40px !important;
+}
+
+@media (max-width: 768px) {
+    .swiper-slide-active {
+        margin-bottom: 30px !important;
+    }
 }
