--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 
-/* customStyles.css */
+/* custom Styles */
 
 .slide {
     background: #fff;
@@ -30,6 +30,27 @@
 .swiper-slide-active {
     transform: scale(1.2);
     margin-bottom: 40px !important;
+}
+
+.slide-content {
+    transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.swiper-slide-active .slide-content {
+    transform: rotateX(0deg) scale(1);
+    opacity: 1;
+}
+
+.swiper-slide-prev .slide-content,
+.swiper-slide-next .slide-content {
+    transform: rotateX(30deg) scale(0.8);
+    opacity: 0.7;
+}
+
+.swiper-slide-prev-prev .slide-content,
+.swiper-slide-next-next .slide-content {
+    transform: rotateX(60deg) scale(0.6);
+    opacity: 0.5;
 }
 
 @media (max-width: 768px) {
